liste des operations
